Added support for hover booting as well.

--- a/DUITests.html
+++ b/DUITests.html
@@ -25,7 +25,7 @@
     
     <h1 class="lol booties whuuut hay">I SHOULDN'T BOOT OR DO ANYTHING</h1>
     
-    <h1 class="bootcapades">DEATH AND SORROW</h1>
+    <h1 class="bootcapades boot-hover-test">DEATH AND SORROW WHEN YOU HOVER</h1>
 </body>
 
 </html>
