Added much cleaner click and event default handling. cmd and ctrl clicks will play nice with the boot loader now.

--- a/DUITests.html
+++ b/DUITests.html
@@ -28,6 +28,8 @@
     <input type="button" class="bootcapades _hover:App_Lique:test" value="HAHAHAHOVER" />
     
     <h1 class="dhtdy _load:App_Lique:loadTest snthp bananas">LOADING</h1>
+    
+    <a href="http://google.com" class="out _click:App_Lique:test">Take me away from here</a>
 </body>
 
 </html>
