--- a/DUITests.html
+++ b/DUITests.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>DUI NO DOY</title>
-    <script type="text/javascript" src="src/DUI.js"></script>
+    <script type="text/javascript" src="src/DUI.min.js"></script>
     
     <script type="text/javascript">
         DUI.scriptURL = './src/';
